// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExchangePriceFix 1`] = `
Object {
  "price": 634.7,
  "volume": 0.4,
}
`;

exports[`getExchangePriceFix 2`] = `
Object {
  "price": 637,
  "volume": 6.002117,
}
`;

exports[`getExchangePriceFix 3`] = `
Object {
  "price": 667,
  "volume": 0.024,
}
`;

exports[`getExchangePriceFix 4`] = `
Object {
  "price": 633,
  "volume": 8.67,
}
`;

exports[`getPriceFix 1`] = `
Array [
  1525072378714,
]
`;

exports[`getVolumeMedianPrice 1`] = `
Object {
  "price": 634.69,
  "volume": 3.15308079,
}
`;

exports[`getVolumeMedianPrice 2`] = `
Object {
  "price": 638,
  "volume": 22.681753,
}
`;

exports[`getVolumeMedianPrice 3`] = `
Object {
  "price": 666.98,
  "volume": 0.16599999999999998,
}
`;

exports[`getVolumeMedianPrice 4`] = `
Object {
  "price": 633,
  "volume": 12.835600000000001,
}
`;

exports[`modifyWeights 1`] = `
Array [
  0.35,
  0.3,
  0.17500000000000004,
  0.17500000000000004,
]
`;

exports[`modifyWeights 2`] = `
Array [
  0.55,
  0.29999999999999993,
  0.14999999999999997,
]
`;

exports[`modifyWeights 3`] = `
Array [
  0.65,
  0.35,
]
`;
